@@ -1,6 +1,7 @@
 
 Drupal 7.19, xxxx-xx-xx (development version)
 -----------------------
+- Fixed broken support for translatable comment fields.
 - Added an assertThemeOutput() method to Simpletest to allow tests to check
   that themed output matches an expected HTML string (API addition).
 - Added a link to "Install another module" after a module has been successfully
